# bazel-rules-jemalloc

./: BUILD.bazel  README.md
bazel/: deps.bzl  repos.bzl
